components/gatekeeper-constraints/sidecar/samples/deny-outbound-traffic-policy-allow-any/namespace-default.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio.io/rev: default
