components/gatekeeper-constraints/sidecar/samples/deny-outbound-traffic-policy-allow-any/sidecar-allow-any.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: myapp
  namespace: default
spec:
  workloadSelector:
    labels:
      app: myapp
  outboundTrafficPolicy:
    mode: ALLOW_ANY
